--- a/Topicos/Views/Produto/Edit.cshtml
+++ b/Topicos/Views/Produto/Edit.cshtml
@@ -42,6 +42,14 @@
             </div>
 
             <div class="form-group">
+                @Html.LabelFor(model => model.Categoria, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EnumDropDownListFor(model => model.Categoria, "Selecione a Categoria", new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Categoria, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
                 <label for="file" class="control-label col-md-2"></label>
                 <div class="col-md-10">
                     <input type="file" name="files" id="file" multiple />
@@ -50,11 +58,11 @@
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    @Html.ActionLink("Voltar", "Index","", new { @class= "btn btn-default"})
+                    @Html.ActionLink("Voltar", "Index", "", new { @class = "btn btn-default" })
                     <input type="submit" value="Salvar" class="btn btn-primary" />
                 </div>
             </div>
         </div>
-    </form> 
+    </form>
 </div>
 
