--- a/Topicos/Views/Produto/Index.cshtml
+++ b/Topicos/Views/Produto/Index.cshtml
@@ -40,16 +40,20 @@
                     @Html.DisplayFor(modelItem => item.Descricao)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Preco)
+                    R$ @Html.DisplayFor(modelItem => item.Preco)
                 </td>
                 <td>
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })
-                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary"})
-                    @*<form action="Delete">
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            <input type="hidden" id="id" name="id" value="@item.Id" />
+                    @*@Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })*@
+                    @*@Html.ActionLink("Excluir", "Delete", new { id = item.Id }, new { @class = "btn btn-danger" })*@
+                    @using (Html.BeginForm("Delete","Produto", method: FormMethod.Post))
+                    {
+                        <div class="form-actions">
+                            @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
+                            <input type="hidden" value="@item.Id" name="id" />
                             <input type="submit" value="Excluir" class="btn btn-danger" />
-                        </form>*@
+                        </div>
+                    }
+
                 </td>
             </tr>
         }
