--- a/Topicos/Views/Login/Index.cshtml
+++ b/Topicos/Views/Login/Index.cshtml
@@ -9,9 +9,9 @@
                 <h3 class="title">Conecte-se</h3>
             </div>
             <div class="order-summary">
-                <form>
+                <form action="Login" method="post">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="email" placeholder="E-mail" required="required">
+                        <input type="text" class="form-control" name="usuario" placeholder="E-mail" required="required">
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control" name="senha" placeholder="Senha" required="required">
