--- a/Topicos/Views/Shared/MainHeader.cshtml
+++ b/Topicos/Views/Shared/MainHeader.cshtml
@@ -37,7 +37,8 @@
                         <!-- /Cart -->
                         <!-- User -->
                         <div>
-                            <a href="#">
+                            @Html.ActionLink("Home","Index", "Home", 
+                            <a href="../login">
                                 <i class="fa fa-user-o"></i>
                                 <span>User</span>
                             </a>
