--- a/Topicos/Views/Shared/MainHeader.cshtml
+++ b/Topicos/Views/Shared/MainHeader.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-md-3">
                     <div class="header-logo">
                         <a href="~/Home/Index" class="logo">
-                            <img src="~/images/logo.png" alt="">
+                            <img src="~/images/logo.jpeg" alt="">
                         </a>
                     </div>
                 </div>
@@ -37,8 +37,8 @@
                         <!-- /Cart -->
                         <!-- User -->
                         <div>
-                            @Html.ActionLink("Home","Index", "Home", 
-                            <a href="../login">
+                            @*@Html.ActionLink(" ","Index", "Home",null,null)*@
+                            <a href="~/Login">
                                 <i class="fa fa-user-o"></i>
                                 <span>User</span>
                             </a>
