--- a/Topicos/Views/Home/Index.cshtml
+++ b/Topicos/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<Topicos.Models.ProdutoModel>
-
 @{
     Html.RenderPartial("MainHeader");
 }
@@ -14,7 +13,6 @@
                 <div class="aside">
                     <h3 class="aside-title">Categorias</h3>
                     <div class="checkbox-filter">
-
                         @foreach (var item in ViewBag.Categorias)
                         {
                             <div class="input-checkbox">
@@ -49,35 +47,35 @@
                                     <div class="product-body">
                                         <p class="product-category">@item.Categoria</p>
                                         <h3 class="product-name">
-                                        @Html.ActionLink(item.Titulo, "Details", "Produto", new { id = item.Id })
-                                    </h3>
-                                    <h4 class="product-price">R$ @item.Preco @*<del class="product-old-price">R$ @item.Preco</del>*@</h4>
-                                    <div class="product-rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
+                                            @Html.ActionLink(item.Titulo, "Details", "Produto", new { id = item.Id }, null)
+                                        </h3>
+                                        <h4 class="product-price">R$ @item.Preco @*<del class="product-old-price">R$ @item.Preco</del>*@</h4>
+                                        <div class="product-rating">
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                            <i class="fa fa-star"></i>
+                                        </div>
+                                        @*<div class="product-btns">
+                                                <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                                <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                                                <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+                                            </div>*@
                                     </div>
-                                    @*<div class="product-btns">
-                                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-                                            <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-                                            <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-                                        </div>*@
-                                </div>
-                                <div class="add-to-cart">
-                                    <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Add Carrinho</button>
+                                    <div class="add-to-cart">
+                                        <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Add Carrinho</button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="clearfix visible-sm visible-xs"></div>
+                            @*<div class="clearfix visible-sm visible-xs"></div>*@
+                        }
                     }
-                }
-                else
-                {
-                    <p>Nenhum Produto encontrado!</p>
-                }
-                    <div class="clearfix visible-lg visible-md"></div>
+                    else
+                    {
+                        <p>Nenhum Produto encontrado!</p>
+                    }
+                    @*<div class="clearfix visible-lg visible-md"></div>*@
                 </div>
             </div>
             <!-- /STORE -->
