--- a/Topicos/Views/Shared/MainHeader.cshtml
+++ b/Topicos/Views/Shared/MainHeader.cshtml
@@ -28,7 +28,8 @@
                 <div class="col-md-3 clearfix">
                     <div class="header-ctn">
                         <div class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                            <a href="~/Carrinho">
+                            @*<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">*@
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>Carrinho</span>
                                 <div class="qty">3</div>
