--- a/Topicos/Views/Shared/_Layout.cshtml
+++ b/Topicos/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         <div id="top-header">
             <div class="container">
                 <ul class="header-links pull-left">
-                    <li>@Html.ActionLink("Home","Index", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Produtos", "Index", "Produto")</li>
                 </ul>
             </div>
@@ -48,5 +48,6 @@
     <script src="~/Scripts/nouislider.min.js"></script>
     <script src="~/Scripts/jquery.zoom.min.js"></script>
     <script src="~/Scripts/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/inputmask/jquery.inputmask.min.js"></script>
 </body>
 </html>
