Add Carrinho na Home

--- a/Topicos/Views/Carrinho/Index.cshtml
+++ b/Topicos/Views/Carrinho/Index.cshtml
@@ -61,7 +61,7 @@
                         <div><strong>R$ 20,00</strong></div>
                     </div>                    <div class="order-col">
                         <div><strong>Valor Total</strong></div>
-                        <div><strong>R$ @ViewBag.ValorTotal</strong></div>
+                        <div><strong>R$ @(ViewBag.ValorTotal + 20)</strong></div>
                     </div>
                 </div>
                 @if (Model.Produtos.Count() > 0)
