--- a/Topicos/Content/style.css
+++ b/Topicos/Content/style.css
@@ -991,7 +991,7 @@ textarea.input {
         position: relative;
         border: 2px solid transparent;
         height: 40px;
-        padding: 0 30px;
+        padding: 7px 30px;
         background-color: #0083E5;
         color: #FFF;
         text-transform: uppercase;
@@ -1017,7 +1017,7 @@ textarea.input {
             background-color: #FFF;
             color: #0092FF;
             border-color: #0092FF;
-            padding: 0px 30px 0px 50px;
+            padding: 7px 30px 0px 50px;
         }
 
             .product .add-to-cart .add-to-cart-btn:hover > i {
