--- a/Topicos/Views/Home/Index.cshtml
+++ b/Topicos/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                                             </div>*@
                                     </div>
                                     <div class="add-to-cart">
-                                        <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Add Carrinho</button>
+                                        <a href="@Url.Action("AddCarrinho","Carrinho", new { id = item.Id})" class="btn add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Add Carrinho</a>
                                     </div>
                                 </div>
                             </div>
