Inclusão de AddCarrinho no details

--- a/Topicos/Views/Carrinho/Index.cshtml
+++ b/Topicos/Views/Carrinho/Index.cshtml
@@ -33,7 +33,7 @@
                         }
                         <div class="order-col">
                             <div><strong>TOTAL</strong></div>
-                            <div><strong class="order-total">@ViewBag.ValorTotal</strong></div>
+                            <div><strong class="order-total">R$ @ViewBag.ValorTotal</strong></div>
                         </div>
                     }
                     else
@@ -60,7 +60,7 @@
                         <div>Frete:</div>
                         <div><strong>R$ 20,00</strong></div>
                     </div>                    <div class="order-col">
-                        <div><strong>Valor Total</strong></div>
+                        <div><strong>Valor Total:</strong></div>
                         <div><strong>R$ @(ViewBag.ValorTotal + 20)</strong></div>
                     </div>
                 </div>
