--- a/Topicos/Views/Shared/MainHeader.cshtml
+++ b/Topicos/Views/Shared/MainHeader.cshtml
@@ -32,7 +32,7 @@
                             @*<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">*@
                                 <i class="fa fa-shopping-cart"></i>
                                 <span>Carrinho</span>
-                                <div class="qty">3</div>
+                                @*<div class="qty">3</div>*@
                             </a>
                         </div>
                         <!-- /Cart -->
