--- a/Topicos/Views/Shared/MainHeader.cshtml
+++ b/Topicos/Views/Shared/MainHeader.cshtml
@@ -40,7 +40,7 @@
                         <div>
                             <a href="~/Login">
                                 <i class="fa fa-user-o"></i>
-                                <span>User</span>
+                                <span>@ViewBag.User</span>
                             </a>
                         </div>
                         <!-- /User -->
