--- a/Topicos/Views/Usuario/Edit.cshtml
+++ b/Topicos/Views/Usuario/Edit.cshtml
@@ -52,7 +52,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <input type="password" value= @Model.Senha class = "form-control"/>
+                    <input type="password" value="@Model.Senha" class="form-control"/>
                 </div>
             </div>
 
