--- a/Topicos/Views/Home/Index.cshtml
+++ b/Topicos/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                                     <div class="product-body">
                                         <p class="product-category">@item.Categoria</p>
                                         <h3 class="product-name">
-                                            @Html.ActionLink(item.Titulo, "Details", "Produto", new { id = item.Id }, null)
+                                            @Html.ActionLink(item.Titulo, "Details", "Produto", new { id = item.Id }, new { @class = "titulo", title = item.Titulo })
                                         </h3>
                                         <h4 class="product-price">R$ @item.Preco @*<del class="product-old-price">R$ @item.Preco</del>*@</h4>
                                         <div class="product-rating">
@@ -57,11 +57,6 @@
                                             <i class="fa fa-star"></i>
                                             <i class="fa fa-star"></i>
                                         </div>
-                                        @*<div class="product-btns">
-                                                <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-                                                <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-                                                <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-                                            </div>*@
                                     </div>
                                     <div class="add-to-cart">
                                         <a href="@Url.Action("AddCarrinho","Carrinho", new { id = item.Id})" class="btn add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Add Carrinho</a>
