--- a/Topicos/Views/Produto/Details.cshtml
+++ b/Topicos/Views/Produto/Details.cshtml
@@ -62,7 +62,7 @@
                     <br />
                     <ul class="product-links">
                         <li>Categoria:</li>
-                        <li><a href="#">@Model.Categoria</a></li>
+                        <li><a href="@Url.Action("Index","Home", new { categoria = Model.Categoria})">@Model.Categoria</a></li>
                     </ul>
                 </div>
             </div>
