--- a/Topicos/Views/Shared/_Layout.cshtml
+++ b/Topicos/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                 <ul class="header-links pull-left">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Produtos", "Index", "Produto")</li>
+                    <li>@Html.ActionLink("Usuários", "Index", "Usuario")</li>
                 </ul>
             </div>
         </div>
