--- a/Topicos/Views/Usuario/Index.cshtml
+++ b/Topicos/Views/Usuario/Index.cshtml
@@ -5,14 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <div class="container">
     <br />
-    <h1 style="text-align:center;">Usuários</h1>
+    <h1 style="text-align:center;">Usuários Cadastrados</h1>
     <hr />
     <br />
     <br />
-
     <table id="table" class="table table-striped table-bordered" cellspacing="0" width="100%" style="text-align:center;">
         <tr>
             <th>
@@ -27,7 +25,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Telefone)
             </th>
-            <th></th>
+            <th>
+                Ações
+            </th>
         </tr>
 
         @foreach (var item in Model)
@@ -46,20 +46,20 @@
                     @Html.DisplayFor(modelItem => item.Telefone)
                 </td>
                 <td>
-                   @*@ @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
                     @using (Html.BeginForm("Delete", "Usuario", method: FormMethod.Post))
                     {
-                    <div class="form-actions">
-                        @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
-                        <input type="hidden" value="@item.Id" name="id" />
-                        <input type="submit" value="Excluir" class="btn btn-danger" />
-                    </div>
+                        <div class="form-actions">
+                            @Html.ActionLink("Editar", "Edit", new { id = item.Id }, new { @class = "btn btn-primary" })
+                            <input type="hidden" value="@item.Id" name="id" />
+                            <input type="submit" value="Excluir" class="btn btn-danger" />
+                        </div>
                     }
                 </td>
             </tr>
         }
-
     </table>
 </div>
+
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/buttons/1.1.0/css/buttons.dataTables.min.css">
+<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
