Regra para pegar o produto mais comprado pelo cliente

--- a/Topicos/Views/Home/Index.cshtml
+++ b/Topicos/Views/Home/Index.cshtml
@@ -34,10 +34,7 @@
                         if (ViewBag.User == "Bem Vindo")
                         {
                             <div>
-                                @foreach (var vend in ViewBag.Vendas)
-                                {
-                                    @vend; <br/>
-                                }
+                                @ViewBag.Vendas
                             </div>
                         }
                         foreach (var item in Model)
