--- a/Topicos/Views/Home/Index.cshtml
+++ b/Topicos/Views/Home/Index.cshtml
@@ -34,9 +34,48 @@
                         if (ViewBag.User == "Bem Vindo")
                         {
                             <div>
-                                @ViewBag.Vendas
+                                <h4>Sugestões Porque você comprou @ViewBag.Nome</h4>
+                                @{int cont = 0;
+                                    foreach (var item in Model)
+                                    {
+                                        if (item.Id != ViewBag.Vendas && item.Categoria == ViewBag.Categoria && cont < 2)
+                                        {
+                                            <div class="col-md-4 col-xs-6">
+                                                <div class="product">
+                                                    <div class="product-img">
+                                                        <img src="~/Images/Produtos/@(item.Id)_1.jpg" alt="" />
+                                                        <div class="product-label">
+                                                            @*<span class="sale">-30%</span>*@
+                                                            <span class="new">NEW</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product-body">
+                                                        <p class="product-category">@item.Categoria</p>
+                                                        <h3 class="product-name">
+                                                            @Html.ActionLink(item.Titulo, "Details", "Produto", new { id = item.Id }, new { @class = "titulo", title = item.Titulo })
+                                                        </h3>
+                                                        <h4 class="product-price">R$ @item.Preco @*<del class="product-old-price">R$ @item.Preco</del>*@</h4>
+                                                        <div class="product-rating">
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                        </div>
+                                                    </div>
+                                                    <div class="add-to-cart">
+                                                        <a href="@Url.Action("AddCarrinho", "Carrinho", new { id = item.Id })" class="btn add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Add Carrinho</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            cont++;
+                                        }
+                                    }
+                                }
+
                             </div>
                         }
+                        <h2></h2>
                         foreach (var item in Model)
                         {
                             <div class="col-md-4 col-xs-6">
@@ -68,8 +107,8 @@
                                 </div>
                             </div>
                             @*<div class="clearfix visible-sm visible-xs"></div>*@
-                            }
-                        
+                        }
+
                     }
                     else
                     {
